--- a/style.css
+++ b/style.css
@@ -8,10 +8,30 @@ body{
     min-height: 100vh;
 }
 .sidebar{
-    background-color: black;
     width: 17%;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-image: url(img/bgside1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .content{
     background-color: white;
     width: 100%;
+}
+
+.icon{
+    display: flex;
+    margin-top: 10px;
+}
+
+.icon-img{
+    margin-left: 20px;
+    height: 35px;
+}
+
+.icon-name{
+    margin-left: 20px;
+    font-size: 25px;
+    text-align: center;
 }
