--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@ body{
     display: flex;
     min-height: 100vh;
 }
+
+.navbar{
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    background-image: url(img/bgside1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .sidebar{
     width: 17%;
     border: 1px solid black;
@@ -18,6 +31,11 @@ body{
 .content{
     background-color: white;
     width: 100%;
+}
+
+.head-name{
+    margin-top: 60px;
+    text-align: center;
 }
 
 .icon{
@@ -36,3 +54,35 @@ body{
     font-size: 25px;
     text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+    .sidebar{
+        display: none;
+    }
+    .navbar{
+        display: flex;
+        justify-content: start;
+        margin-left: 20px;
+    }
+}
+
+@media screen and (min-width: 600px) and (max-width: 768px) {
+   .sidebar{
+    display: none;
+   }
+   .navbar{
+    display: flex;
+}
+  }
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+    .navbar{
+        display: none;
+    }
+  }
+
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+.navbar{
+    display: none;
+}
+  }
